# ceri-m1-ecommerce-2022

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh  package-lock.json  package.json
.github/workflows/: back-action.yml  deploy-action.yml  front-action.yml  main.yml
.github/workflows-old/: front-action.yml
backend/: .dockerignore  .env  Dockerfile  Dockerfile.yml  entrypoint.sh  main.py  models.py  mysql.sql  pyproject.toml  requirements.txt  test.py
backend/db/: database.py  mysql.sql
backend/models/: Album.py  Artist.py  Song.py
backend/services/: db_utils.py
backend/sql_alchemy/: crud.py  database.py  models.py  schemas.py
backend/src/: crud.py  model_type.py  models.py
backend/src/config/: conf.py
backend/src/searchengine/: index.py
backend/tests/: test_utils.py
cloud-sql/: Dockerfile
db/: .env  Copy of Diagramme sans nom.drawio  README.MD  ecom_db.sql  ecom_db_ancien.sql  vinyl.drawio
frontend/: .dockerignore  Dockerfile.dev.yml  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  algolia.d.ts  main.ts
frontend/src/assets/: main.css
frontend/src/components/: Footer.vue  Header.vue  HelloWorld.vue  Homepage.vue  LandingPage.vue  ListAlbum.vue  ListArtist.vue  ListCategory.vue  Notification.vue  Panier.vue  Panier_Multistep.vue  StepProgress.vue
frontend/src/interfaces/: index.ts
frontend/src/models/: index.ts
frontend/src/plugins/: webfontloader.ts
frontend/src/router/: index.ts
reverse_proxy/conf/: dev.conf  prod.conf
terraform/: key.json  main.tf
(+61 files in other folders)
